# docs/swagger.json
@@ -129,8 +129,22 @@
                     },
                     {
                         "type": "string",
-                        "description": "fullName",
-                        "name": "fullName",
+                        "description": "repeatPassword that have at least 8 length and contain an alphabet and number ",
+                        "name": "repeatPassword",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "firstName",
+                        "name": "firstName",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "lastName",
+                        "name": "lastName",
                         "in": "query",
                         "required": true
                     }
@@ -247,6 +261,10 @@
         },
         "models.UserResponse": {
             "type": "object",
+            "required": [
+                "firstName",
+                "lastName"
+            ],
             "properties": {
                 "createdAt": {
                     "type": "string"
@@ -254,11 +272,14 @@
                 "email": {
                     "type": "string"
                 },
-                "fullName": {
+                "firstName": {
                     "type": "string"
                 },
                 "id": {
                     "type": "integer"
+                },
+                "lastName": {
+                    "type": "string"
                 },
                 "updatedAt": {
                     "type": "string"
